--- a/publics/css/style.css
+++ b/publics/css/style.css
@@ -1275,6 +1275,15 @@ span{
     }
 }
 
+@keyframes cute6{
+    0%{
+        left: 20px;
+    }
+    100%{
+        left: 60px;
+    }
+}
+
 .boxMail .boxMail-container .card2 .card2-content .imageCute2 img{
     width: 40px;
 }
@@ -1308,3 +1317,43 @@ span::before{
     }
 }
 /* ------hết hiệu ứng di chuyển chuột----- */
+
+
+@media(max-width:768px) {
+    body{ 
+        min-height: 100vh;
+    }
+    .container{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+    .container .boxcontainer{
+        width: 100%;
+        height: 450px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        border-radius: 10px;
+        box-shadow: -5px -5px 15px rgba(255, 255, 255),
+                    5px 5px 15px rgb(0, 0, 0, 0.5);
+        background-image: radial-gradient(circle farthest-corner at center, #ffe0ee 0%, #ffd3ee 100%);
+        animation: bgr 4s forwards;
+        transition: 1s;
+    }
+
+    .boxMail .boxMail-container .card2{
+        width: 40%;
+    }
+
+    .boxMail .boxMail-container .card2 .card2-content:hover .imageCute3{
+        animation:  cute5 1s linear infinite,
+                    cute6 3s 2s forwards;
+
+    }
+}
